--- a/src/components/Comp.css
+++ b/src/components/Comp.css
@@ -6,21 +6,16 @@
     width: 250px;
     line-height: 4px;
 }
-/* .img{
-    
-} */
-/* .Main{
-    border: 1px solid black;
-} */
-.head{
-    /* border:1px solid black; */
-    padding: 10px;
-    position: relative;
-    height: 60px;
-    top: 10px;
-    
+.w3-margin-left {
+    margin-left: 20px!important;
 }
-
+.w3-bar {
+    width: 100%;
+    overflow: hidden;
+    padding: 10px;
+    position: sticky;
+    top: 5px;
+}
 .quant{
     max-width:50px;
     margin: 5px;
@@ -44,18 +39,7 @@
     outline: none;
     border: none;
 }
-/* .toast{
-    background-color: /* #616161  red;
-    color: white;
-    padding: 10px;
-    max-width: 300px;
-    text-align: center;
-    border-radius: 10px;
-    position: fixed; 
-    /* transform: translate(550px,-2100px); 
-    bottom: 10px !important;
-    right:500px !important;
-} */
+
 .toasts{
     background-color: #616161;
     padding: 10px;
@@ -65,13 +49,7 @@
     border-radius: 10px;
     text-align: center;
 }
-.posts{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding: 50px;
-    width: 50px;
-    margin: 10px 120px 10px 120px;
-}
+
 .cart{
     position: absolute;
     right: 80px;
@@ -80,16 +58,7 @@
     font-size: 25px;
     cursor: pointer;
 }
-.headname{
-    position: absolute;
-    display: inline;
-    top: 1px;
-    left: 80px;
-    bottom: 10px;
-    color: #0c6ab8;
-    font-weight: 600;
-    font-size: 30px;
-}
+
 .cartValue{
     border: 1px solid black;
     position: absolute;
@@ -98,30 +67,6 @@
     padding: 3px;
     background-color:#42a5f5;
     color: white;
-}
-.final{
-    border:1px solid black;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 5px;
-}
-.final>div{
-    border: 1px solid black;
-}
-.final>div>p{
-    padding: 10px;
-    color: black;
-}
-.final>div>input{
-    width: 40px;
-    margin: 20px;
-    padding: 5px;
-    color: black;
-
-}
-.ftotal{
-    color: black;
-    font-size: 25px;
 }
 .confirm{
     font-size: 30px;
@@ -136,23 +81,8 @@
     width: 100%;
     height: 100%;
 }
-.fcitem{
-    position: absolute;
-    /* border: 1px solid black; */
-    width: 50%;
-    height: 65%;
-    top: 130px;
-    left: 300px;
-    background-color: white;
-    overflow: scroll;
-}
-.close{
-    position: fixed;
-    /* right: 0px;
-    top: 2px; */
-    transform: translate(300px,10px);
-    padding: 5px;
-}
+
+
 .fitems{
     margin: 10px;
     height: 75%;
@@ -163,11 +93,13 @@
     grid-template-columns: auto auto auto auto;
     position: relative;
     height: 130px;
+    margin: 20px;
 
 }
 .f1{
     position: absolute;
     left: 2px;
+    width: 10px
 }
 .f2{
     position: absolute;
@@ -198,21 +130,19 @@
     top: 45px;
     cursor: pointer;
 }
-.total{
-    float: left;
-    font-size: larger;
-    font-weight: 500;
-}
-.buy{
-    padding: 3px;
-    /* position: absolute;
-    right: 35px;
-    bottom: 50px; */
-    float: right;
-    
-    font-size: larger;
-    background-color: #afc4da9a;
-    outline: none;
-    border-radius: 12px;
-    width: 135px;
-}
+
+@media only screen and (max-width: 600px) {
+    .f1{
+        width: 20px;
+    }
+    .f2 {
+        position: absolute;
+        left: 5%;
+        top: 75px;
+    }
+    .f3 {
+        position: absolute;
+        left: 30%;
+        top: 45px;
+    }
+  }
